# ChangeLog for net-irc/weechat
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/weechat/ChangeLog,v 1.43 2007/03/10 11:09:42 drizzt Exp $

  10 Mar 2007; Timothy Redaelli <drizzt@gentoo.org> weechat-0.2.3.ebuild:
  Add ~x86-fbsd keyword

  24 Feb 2007; nixnut <nixnut@gentoo.org> weechat-0.2.3.ebuild:
  Stable on ppc wrt bug 164031

  17 Feb 2007; Raúl Porcel <armin76@gentoo.org> weechat-0.2.3.ebuild:
  x86 stable wrt bug 164031

*weechat-0.2.3 (13 Jan 2007)

  13 Jan 2007; Sven Wegener <swegener@gentoo.org> -weechat-0.2.2.ebuild,
  +weechat-0.2.3.ebuild:
  Version bump.

*weechat-0.2.2 (06 Jan 2007)

  06 Jan 2007; Sven Wegener <swegener@gentoo.org> +weechat-0.2.2.ebuild:
  Version bump.

*weechat-0.2.1 (01 Oct 2006)

  01 Oct 2006; Sven Wegener <swegener@gentoo.org> +weechat-0.2.1.ebuild:
  Version bump.

  27 Sep 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
  weechat-0.1.9.ebuild:
  stable on ppc (Bug #142462)

  03 Sep 2006; <blubb@gentoo.org> weechat-0.2.0.ebuild:
  added ~amd64

*weechat-0.2.0 (19 Aug 2006)

  19 Aug 2006; Sven Wegener <swegener@gentoo.org> +weechat-0.2.0.ebuild:
  Version bump.

  02 Aug 2006; Sven Wegener <swegener@gentoo.org> -weechat-0.1.6.ebuild,
  -weechat-0.1.7.ebuild, -weechat-0.1.8.ebuild:
  Cleanup.

  01 Aug 2006; Andrej Kacian <ticho@gentoo.org> weechat-0.1.9.ebuild:
  Stable on x86, bug #142462.

  01 Aug 2006; Sven Wegener <swegener@gentoo.org> weechat-0.1.9.ebuild:
  Slightly change the configure logic.

*weechat-0.1.9 (01 Jul 2006)

  01 Jul 2006; Markus Ullmann <jokey@gentoo.org> +weechat-0.1.9.ebuild:
  Version bump wrt bug #138335

*weechat-0.1.8 (18 Mar 2006)

  18 Mar 2006; Sven Wegener <swegener@gentoo.org> -weechat-0.1.4-r1.ebuild,
  -weechat-0.1.5.ebuild, +weechat-0.1.8.ebuild:
  Version bump.

*weechat-0.1.7 (17 Feb 2006)

  17 Feb 2006; Sven Wegener <swegener@gentoo.org> +weechat-0.1.7.ebuild:
  Version bump, bug #121282.
