@@ -1,3 +1,0 @@
-MD5 69c292237bebd4b7a1ff29c0f9c76380 weechat-0.2.0.tar.bz2 1047146
-RMD160 601bd65ab1e0d33a74b41e20d2a4b62adafb9648 weechat-0.2.0.tar.bz2 1047146
-SHA256 3cf60362b2923de7df5231937d4eee7bcc06d26d5fd401060198ccdc857aafae weechat-0.2.0.tar.bz2 1047146
