@@ -1,3 +1,0 @@
-MD5 ab6b465b0107f5ee013bc54e386a1500 weechat-0.2.1.tar.bz2 1056706
-RMD160 bca03aa9dc4ed423c89dfc0efb9489a724f32309 weechat-0.2.1.tar.bz2 1056706
-SHA256 37f7a7c90d0676826299037ee483dba62d12fac2ee440a798ac9fbfe74024db8 weechat-0.2.1.tar.bz2 1056706
